# django-pdf-overlay

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  manage.py  pyproject.toml  requirements.txt  setup.py  temp.py  test_settings.py  tox.ini  urls.py
.github/workflows/: run-django-tests.yml
django_pdf/: settings.py  urls.py  wsgi.py
django_pdf_filler/: __init__.py  app_settings.py  apps.py  commands.py  compat.py  forms.py  models.py  signals.py  urls.py  utils.py  validators.py  views.py
django_pdf_filler/migrations/: 0001_initial.py
django_pdf_filler/templates/django_pdf_filler/: base.html  document_confirm_delete.html  document_detail.html  document_form.html  document_list.html  field_editor.html  field_layout.html  page_form.html
django_pdf_filler/tests/: test_models.py  test_perms.py  test_utils.py
django_pdf_overlay/: __init__.py  app_settings.py  apps.py  commands.py  forms.py  models.py  signals.py  urls.py  utils.py  validators.py  views.py
django_pdf_overlay/migrations/: 0001_initial.py
django_pdf_overlay/templates/django_pdf_overlay/: base.html  document_detail.html  (+6 more)
django_pdf_overlay/tests/: base_test_classes.py  test_commands.py  test_general.py  test_models.py  test_utils.py
docs/: commands.rst  conf.py  configuration.rst  fields.rst  index.rst  installation.rst
forms/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  validators.py  views.py
forms/migrations/: 0001_initial.py  0002_auto_20190711_1540.py
forms/tests/: test_models.py  test_utils.py
tests/: base_test_classes.py  test_models.py
(+12 files in other folders)
